- prevent scrollbar in tag nav

--- a/client/templates/snaxterLayout/snaxterLayout.less
+++ b/client/templates/snaxterLayout/snaxterLayout.less
@@ -233,3 +233,7 @@ div.product-variants .form-control {
 .title h1 .product-detail-field.title {
   word-wrap: break-word;
 }
+
+.rui.tagnav .navbar-items {
+  overflow-y: visible;
+}
